--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "package-lock.json": "^1.0.0",
     "polka": "next",
     "sirv": "^1.0.0",
+    "ta": "^0.0.0",
+    "ts": "^0.0.0",
+    "tsc": "^2.0.4",
     "tsconfig": "^7.0.0"
   },
   "devDependencies": {
